<resources>
    <string name="app_name">เกมบำบัดซึมเศร้า</string>
    <string name="tetris_game">เกมเททริส(Tetris)เป็นเกมแก้ปัญหาจัดเรียงตัวบล็อกที่หล่นลงมาจัดเรียงให้เป็นแถว สามารถช่วยบำบัดอาการซึมเศร้าได้ </string>
    <string name="depressionText01">ความหมายและสาเหตุของ\nภาวะโรคซึมเศร้า</string>
    <string name="depressionText02">อาการของภาวะโรคซึมเศร้า</string>
    <string name="depressionText03">การรักษาภาวะโรคซึมเศร้า</string>
    <string name="depressionText04">การป้องกันภาวะโรคซึมเศร้า</string>
    <string name="depressionText05">ปัจจัยเสี่ยงภาวะโรคซึมเศร้า</string>
    <string name="depressionText06">ผลข้างเคียงจากการรักษาด้วยยา\nภาวะแทรกซ้อนของโรคซึมเศร้า</string>
    <string name="depressionText07">วินิจฉัยภาวะโรคซึมเศร้า</string>
    <string name="depressionText08">ชนิดของโรคซึมเศร้า</string>
    <string name="depressionBody01">\t\t โรคซึมเศร้าส่งผลให้ผู้ป่วยมีอาการป่วยทั้งทางด้านร่างกาย จิตใจและความคิด โดยอาการ ต่าง ๆ เหล่านี้จะคอยสร้างผลกระทบต่อการดำเนินชีวิตในประจำวันอย่างมาก เช่น รับประทานอาหารได้น้อยลง เบื่ออาหาร นอนไม่หลับ มีความรู้สึกว่าตัวเองไม่มีความสุขกับชีวิต ในหัวสมองมักมีแต่ความวิตกกังวล ที่สำคัญผู้ป่วยไม่มีความสามารถในการประสานความคิดและความรู้สึกของตัวเองเพื่อใช้ในการแก้ไขปัญหาได้อย่างดี</string>
    <string name="depressionBody01_01">\t\t สำหรับสาเหตุที่ทำให้เกิดอาการซึมเศร้านั้นมาจากหลากหลายปัจจัยด้วยกัน ไม่ว่าจะเป็นในด้านของกรรมพันธุ์ ด้านพัฒนาการของจิตใจ รวมทั้งด้านสิ่งแวดล้อมที่ต้องเผชิญ ตัวอย่างเช่น ผู้ป่วยประสบกับความเครียดที่แสนหนัก เจอมรสุมชีวิตที่ไม่ทันได้ตั้งตัว เกิดอาการเจ็บป่วยเรื้อรังจนทำให้หมดกำลังใจ ตกงาน มีปัญหาเรื่องการเงินที่หาทางออกไม่ได้ มีปัญหาเกี่ยวกับความสัมพันธ์กับคนใกล้ชิด รวมทั้งพบเจอกับความสูญเสียในชีวิตที่ทำให้เสียใจเป็นอย่างมาก ไม่ว่าจะเป็นการสูญเสียพ่อแม่ในขณะที่ยังอยู่ในช่วงของวัยเด็ก สูญเสียคนรัก สูญเสียครอบครัว และยังรวมถึงปัจจัยทางชีวภาพ เช่น เกิดการเปลี่ยนแปลงของระดับสารเคมีในสมองบางชนิด ก็สามารถส่งผลทำให้เกิดโรคซึมเศร้าได้เช่นเดียวกัน รวมถึงการใช้สารเสพติดที่อาจทำให้สารเคมีในสมองผิดปกติ</string>
    <string name="depressionBody02">\t\t หากคุณสงสัยว่าตัวเองหรือคนใกล้ชิดเป็นโรคซึมเศร้า ให้สังเกตอาการดังต่อไปนี้ หากมีอย่างน้อย 5 อย่างหรือมากกว่าติดต่อกันอย่างน้อย 14 วันและมีอาการเหล่านี้อยู่เกือบทั้งวัน ถือว่าเข้าข่ายเป็นโรคซึมเศร้า</string>
    <string name="depressionBody02_01">1. มีอารมณ์ซึมเศร้า (เด็กหรือวัยรุ่นอาจมีอาการหงุดหงิด โกรธง่าย)</string>
    <string name="depressionBody02_02">2. นอนไม่หลับ หรือหลับๆตื่นๆหรือหลับมาก</string>
    <string name="depressionBody02_03">3. เหนื่อยง่ายหรือไม่ค่อยมีแรง</string>
    <string name="depressionBody02_04">4. เบื่ออาหารหรือกินมากเกินไป</string>
    <string name="depressionBody02_05">5. รู้สึกไร้ค่า รู้สึกไม่ดีกับตัวเอง</string>
    <string name="depressionBody02_06">6. ไม่มีสมาธิหรือลังเลใจไปหมด</string>
    <string name="depressionBody02_07">7. พูดช้า ทำอะไรช้าลงหรือกระวนกระวาย ไม่อยู่นิ่ง</string>
    <string name="depressionBody02_08">8. มีความคิดอยากตาย คิดทำร้ายตัวเอง</string>
    <string name="depressionBody02_09">\t\t ภาวะซึมเศร้าในผู้ป่วยแต่ละรายจะมีอาการแตกต่างกันไปตามระดับความรุนแรงของโรค เพศ หรืออายุ โดยอาจมีอารมณ์เศร้า หดหู่ วิตกกังวล มีความรู้สึกว่าตนไร้ค่า โดดเดี่ยว สิ้นหวัง หงุดหงิดง่าย ซึ่งอารมณ์เหล่านี้จะมีความรุนแรงและคงอยู่ยาวนานกว่าปกติ ทั้งยังสามารถส่งผลกระทบทำให้ร่างกายรู้สึกอ่อนล้าตลอดเวลา เจ็บปวดตามร่างกาย นอนหลับยากหรือหลับมากเกินไป หรือมีพฤติกรรมแยกตัวจากสังคม ไม่มีสมาธิ ทำงานไม่ได้ หมดความสนใจในเรื่องที่เคยชอบ ไปจนถึงการคิดฆ่าตัวตายหรือทำร้ายตัวเองได้</string>
    <string name="depressionBody03">\t\t การรักษาโรคซึมเศร้าในปัจจุบัน หลัก ๆ มีด้วยกัน 3 วิธี คือ การใช้ยาต้านซึมเศร้า (Antidepressants) การพูดคุยบำบัดทางจิต (Psychotherapy) และการกระตุ้นเซลล์สมองและประสาท (Brain Stimulation Therapies) โดยมากแพทย์จะรักษาด้วยการใช้ยาต้านซึมเศร้าและการพูดคุยบำบัดกับผู้ป่วยควบคู่กันไป ส่วนในรายที่มีอาการรุนแรงมาก มีพฤติกรรมมุ่งทำร้ายทำตัวเองหรือฆ่าตัวตาย จึงจะเลือกใช้การกระตุ้นเซลล์สมองและประสาทเพื่อรักษาได้ทันท่วงที ทั้งนี้แพทย์ยังต้องพิจารณาอีกด้วยว่าจะใช้ยาตัวใด การพูดคุยบำบัด และการกระตุ้นเซลล์สมองรูปแบบใดจึงจะปลอดภัยและเหมาะสมกับผู้ป่วยรายนั้น ๆ ที่สุด</string>
    <string name="depressionBody044">\t\t ภาวะทางจิตใจที่ย่ำแย่สามารถส่งผลในหลายด้าน ทั้งทางร่างกาย พฤติกรรม และนำไปสู่โรคแทรกซ้อนอื่น ๆ ในที่สุด เป็นเหตุให้ผู้ป่วยมีความผิดปกติของร่างกาย เช่น เจ็บปวดตามส่วนต่าง ๆ รอบเดือนผิดปกติ มีปัญหาทางเพศ ปัญหาด้านการนอนหลับ พฤติกรรมการกินที่ผิดปกติ น้ำหนักเกิน และนำไปสู่การเกิดโรคต่าง ๆ เช่น โรคหัวใจ และโรคเบาหวานตามมาในที่สุด</string>
    <string name="depressionBody04">\t\t การป้องกันโรคซึมเศร้าทำได้โดยปฏิบัติหลักสุขศึกษา คือ</string>
    <string name="depressionBody04_01">1. อาหาร ให้กินอาหารครบ 5 หมู่ หากขาดสารอาหารบางอย่างไปจะทำให้มีความเสี่ยงเป็นโรคซึมเศร้ามากขึ้น เช่น โอเมก้า 3 วิตามิน อี ซี ดี ทองแดง ธาตุเหล็ก</string>
    <string name="depressionBody04_02">2. การออกกำลังกาย ควรออกกำลังกายสัปดาห์ละอย่างน้อย 4 วันต่อสัปดาห์ ต่อเนื่องกัน 30–40 นาที เป็นการออกกำลังกายเบาๆ เช่น เดินเร็วก็ได้</string>
    <string name="depressionBody04_03">3. การพักผ่อน นอนหลับให้เพียงพอกับที่ร่างกายต้องกาย ให้ตื่นขึ้นมาแล้วรู้สึกสดชื่น ไม่ง่วงหรือยังเพลียอยู่</string>
    <string name="depressionBody04_04">4. การทำสมาธิ (Mindfulness) เพื่อผ่อนคลายจิตใจ มีงานวิจัยมากมายพบว่าการทำสมาธิช่วยให้สมองผ่อนคลาย ลดความเครียดได้</string>
    <string name="depressionBody04_05">5. การฝึกคิดบวก ป้อนความคิดทางบวกให้กับตัวเองอยู่เสมอเพื่อสร้างให้จิตใจมีความเข้มแข็ง เอาชนะอุปสรรคในชีวิตได้</string>
    <string name="depressionBody05">\t\t โรคซึมเศร้าทำให้เกิดปัจจัยเสี่ยงตามมามากมาย ตั้งแต่โรคทางกาย เช่น โรคเบาหวาน โรคความดันโลหิตสูง โรคหัวใจ โรคไทรอยด์ โรคภูมิแพ้ โรคภูมิคุ้มกันบกพร่อง โรคสมองเสื่อม และโรคมะเร็ง นอกจากนี้ผู้ป่วยด้วยโรคซึมเศร้ายังมีความเสี่ยงที่จะเกิดอุบัติเหตุได้มากกว่าคนปกติ เสียชีวิตจากสารเสพติด หรือแม้กระทั่งฆ่าตัวตาย</string>
    <string name="depressionBody05_01">\t\t ภาวะทางจิตใจที่ย่ำแย่สามารถส่งผลในหลายด้าน ทั้งทางร่างกาย พฤติกรรม และนำไปสู่โรคแทรกซ้อนอื่น ๆ ในที่สุด เป็นเหตุให้ผู้ป่วยมีความผิดปกติของร่างกาย เช่น เจ็บปวดตามส่วนต่าง ๆ รอบเดือนผิดปกติ มีปัญหาทางเพศ ปัญหาด้านการนอนหลับ พฤติกรรมการกินที่ผิดปกติ น้ำหนักเกิน และนำไปสู่การเกิดโรคต่าง ๆ เช่น โรคหัวใจ และโรคเบาหวานตามมาในที่สุด</string>
    <string name="depressionBody06">\t\t ปัจจุบันยารักษาโรคซึมเศร้าเป็นยาที่ถือว่าปลอดภัย ไม่ค่อยมีผลข้างเคียง ผู้ป่วยบางคนกลัวผลข้างเคียงจนไม่กล้ากินยาตามที่แพทย์สั่งจนครบ เพราะกลัวว่าจะติดยาหรือกลัวว่ายาทำให้มีอาการมึนงงไปหมด ความจริงแล้วยาแก้ซึมเศร้าไม่มีการติดยาและไม่ทำให้เกิดอาการมึนงงอย่างที่เข้าใจกัน</string>
    <string name="depressionBody077">\t\t แพทย์มักวินิจฉัยเบื้องต้นด้วยการพูดคุยสอบถามถึงอาการ ความคิด ความรู้สึก และพฤติกรรมของผู้ป่วยว่าเข้าข่ายภาวะซึมเศร้าหรือไม่ มีความรุนแรงระดับใด โดยใช้ชุดคำถามมาตรฐานในการตรวจสอบ จากนั้นหากเข้าข่ายจะตรวจร่างกาย เช่น ตรวจเลือดหรือตรวจปัสสาวะ เพื่อให้แน่ใจได้ว่าภาวะซึมเศร้าที่สงสัยไม่ได้เป็นเกิดจากโรคอื่น ๆ เนื่องจากการรักษาที่โรคต้นเหตุจะเป็นการรักษาภาวะซึมเศร้าโดยตรง แล้วพิจารณาถึงวิธีการรักษาที่เหมาะสมในขั้นต่อไป</string>
    <string name="depressionBody07">\t\t นอกจากจะดูว่าผู้ป่วยมีอาการดังกล่าวข้างต้นอย่างน้อย 5 ข้อเป็นเวลาติดต่อกันไม่ต่ำกว่า 14 วันแล้ว แพทย์ยังต้องสอบถามรายละเอียดของอาการและเรื่องราวจากผู้ป่วยหรือบางครั้งจากญาติใกล้ชิดร่วมด้วย เพื่อให้เข้าใจผู้ป่วยและแน่ใจว่าผู้ป่วยไม่ได้เป็นโรคทางจิตเวชอื่นๆที่คล้ายคลึงกับโรคซึมเศร้า รวมถึงสอบถามประวัติความเจ็บป่วยอื่นๆเพื่อดูว่าเป็นสาเหตุของโรคซึมเศร้าหรือไม่</string>
    <string name="depressionBody08">\t\t โรคซึมเศร้าแบ่งออกเป็น 3 ชนิดด้วยกัน ซึ่งแต่ละชนิดมีรายละเอียดที่แตกต่างกันไปดังนี้</string>
    <string name="depressionBody08_01">1. Major Depression (โรคซึมเศร้าแบบรุนแรง) โรคซึมเศร้าชนิดนี้เกิดขึ้นเมื่อภาวะซึมเศร้ารบกวนความสุขในชีวิต การทำงาน การเรียน การนอนหลับ นิสัยการกิน และอารมณ์สุนทรีย์ ติดต่อกันอย่างน้อยสองสัปดาห์ บางคนอาจพบแค่เพียงหนึ่งอาการแสดงของภาวะซึมเศร้า ซึ่งอาการของโรคซึมเศร้าชนิดนี้จะเกิดเป็นครั้ง ๆ แล้วหายไป แต่ทั้งนี้ก็สามารถเกิดได้บ่อยครั้ง</string>
    <string name="depressionBody08_02">2. Dysthymia หรือ Persistent Depressive Disorder (โรคซึมเศร้าเรื้อรัง) เป็นโรคซึมเศร้าแบบเรื้อรังที่มีอาการแสดงของอารมณ์ไม่รุนแรงนัก แต่จะเป็นไปอย่างต่อเนื่องอย่างน้อยสองปี ในบางช่วงเวลาของภาวะซึมเศร้าประเภทนี้อาจมีภาวะ major depression ร่วมด้วย ซึ่งจะรบกวนการดำรงชีวิตประจำวัน ทั้งนี้มันสามารถทำให้ผู้ป่วยเกิดการสูญเสียความสามารถในการทำงานและความรู้สึกที่ดีได้</string>
    <string name="depressionBody08_03">3. Bipolar หรือ Manic-depressive Illness (โรคซึมเศร้าอารมณ์ตก) ผู้มีภาวะซึมเศร้าบางคนอาจมีความผิดปกติแบบอารมณ์สองขั้วร่วมด้วย (bipolar disorder) เป็นโรคซึมเศร้าชนิดที่ผู้ป่วยมีการเปลี่ยนแปลงทางด้านอารมณ์ ซึ่งเป็นลักษณะที่มีอารมณ์แปรปรวนรุนแรงสลับไปมาระหว่างความคิดฟุ้งซ่านขาดสติ (Mania) และภาวะซึมเศร้า (Depression)</string>
    <string name="forgot_password_header">เปลี่ยนรหัสผ่านของคุณ</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_text">ระบุอีเมลที่ต้องการรีเซ็ตรหัสผ่าน</string>
    <string name="cancel_forgot">ยกเลิกการรีเซ็ตรหัสผ่าน</string>
    <string name="forgot_pass_show">กรอกรหัสผ่านปัจจุบัน…</string>
    <string name="forgot_pass_new_show">กรอกรหัสผ่านใหม่...</string>
    <string name="forgot_pass_new_again_show">กรอกรหัสผ่านใหม่อีกครั้ง...</string>
    <string name="change_pass_show">เปลี่ยนแปลงรหัสผ่านใหม่</string>
    <string name="confirm_new_password_show">Confirm New Password | ยืนยันรหัสผ่านใหม่</string>
    <string name="new_password_show">New Password | รหัสผ่านใหม่</string>
    <string name="check_forgot_show">[กรุณาตรวจสอบเพื่อยืนยัน]</string>
    <string name="check_forgot">ตรวจสอบ</string>
    <string name="current_password_show">Current Password | รหัสผ่านปัจจุบัน</string>
    <string name="forgot_text_show">กรุณาป้อนรหัสผ่านปัจจุบันของคุณ เพื่อเปลี่ยนรหัสผ่านใหม่</string>
    <string name="setProfile">โปรไฟล์ของฉัน</string>
    <string name="Loading">กำลังโหลด…</string>
    <string name="editProfile"><u>อัปโหลดรูปโปรไฟล์</u></string>
    <string name="home">หน้าหลัก</string>
    <string name="profile">โปรไฟล์</string>
    <string name="feedback">ให้คะแนน</string>
    <string name="update_email">แก้ไขอีเมล</string>
    <string name="change_password">เปลี่ยนรหัสผ่าน</string>
    <string name="setting">ตั้งค่า</string>
    <string name="delete_profile">ยกเลิกบัญชีผู้ใช้</string>
    <string name="nextReg">หากคุณยังไม่ได้ลงทะเบียน <u>โปรดคลิกที่นี่เพื่อลงทะเบียน</u></string>
    <string name="nextLogin">หากคุณได้ลงทะเบียนไว้แล้ว <u>โปรดคลิกที่นี่เพื่อเข้าสู่ระบบ</u></string>
    <string name="select_level">เลเวลด่านปัจจุบัน</string>
    <string name="play">เล่นเกม</string>
    <string name="exit">ออกจากเกม</string>
    <string name="score">คะแนน: </string>
    <string name="action_sound">เสียงดนตรี</string>
    <string name="action_music">เสียงเอฟเฟค</string>
    <string name="action_vibrate">โหมดสั่น</string>
    <string name="msg_do_you_want_to_exit">คุณต้องการออกจากเกมใช่ไหม?</string>
    <string name="action_no">กลับไปเล่นเกม</string>
    <string name="action_exit">ออก</string>
    <string name="msg_game_over">จบเกม</string>
    <string name="action_restart">เล่นเกมอีกครั้ง</string>
    <string name="msg_complete">เสร็จสิ้น</string>
    <string name="continue_game">ไปด่านเลเวล:</string>
    <string name="level">เลเวล</string>
    <string name="score_game">คะแนน</string>
    <string name="agreement">ข้อตกลงเบื้องต้น</string>
    <string name="agreement_text_01">1. เมื่อผู้ใช้งานลงทะเบียนเข้าใช้บริการแอปพลิเคชันโดยการเลือก “ยอมรับเงื่อนไข” เรียบร้อยแล้วถือว่าผู้ใช้งาน ได้รับทราบและยอมรับข้อตกลงและเงื่อนไขทั้งหมดนี้แล้ว ทั้งนี้ทางคณะผู้จัดทำขอสงวนสิทธิ์ในการแก้ไข หรือเปลี่ยนแปลงข้อตกลงและเงื่อนไข การใช้บริการแอปพลิเคชันได้ตลอดเวลา</string>
    <string name="depression">Depression</string>
    <string name="therapy_game">Therapy Game</string>
    <string name="game_dep">เกมบำบัดภาวะซึมเศร้าในวัยรุ่น</string>
    <string name="more_game">ย้อนกลับ</string>
    <string name="login_home">LOGIN | เข้าสู่ระบบ</string>
    <string name="register_home">REGISTER | สมัครสมาชิก</string>
</resources>