<?xml version="1.0" encoding="utf-8"?><!--
[** CREATE : 1/02/2022 **]
[** UPDATE : 1/02/2022 **]
[** DEVELOPER BY NATHIT PANROD  **]
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <!-- LinearLayout: Group dialog -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- LinearLayout: Group Depression -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- ImageView: show Depression  -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="315dp"
                android:src="@drawable/dep04img" />

            <!-- CardView: ViewGroup dialog -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="250dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="?attr/dialogbackgroundcolor"
                app:cardCornerRadius="15dp">

                <!-- LinearLayout: ViewGroup -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <!-- TextView: Show Title Depression -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/chub"
                        android:text="@string/depressionText04"
                        android:textColor="?attr/textcolor"
                        android:textSize="25sp" />

                    <!-- View: Line -->
                    <View
                        android:layout_width="250dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:background="@color/teal_200" />

                    <!-- ScrollView: Show slide Description -->
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:layout_marginTop="20dp">

                        <!-- LinearLayout: Description -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/dialogboxcolor"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <!-- TextView: Show Title Description -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/chur"
                                android:text="@string/depressionBody04"
                                android:textColor="?attr/textcolor"
                                android:textSize="18sp" />

                            <!-- TextView: Show Title Description -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/chur"
                                android:text="@string/depressionBody04_01"
                                android:textColor="?attr/textcolor"
                                android:textSize="18sp" />

                            <!-- TextView: Show Title Description -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/chur"
                                android:text="@string/depressionBody04_02"
                                android:textColor="?attr/textcolor"
                                android:textSize="18sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/chur"
                                android:text="@string/depressionBody04_03"
                                android:textColor="?attr/textcolor"
                                android:textSize="18sp" />

                            <!-- TextView: Show Title Description -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/chur"
                                android:text="@string/depressionBody04_04"
                                android:textColor="?attr/textcolor"
                                android:textSize="18sp" />

                            <!-- TextView: Show Title Description -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:fontFamily="@font/chur"
                                android:text="@string/depressionBody04_05"
                                android:textColor="?attr/textcolor"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </ScrollView>

                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/button_state_list_animator_white"
                        android:elevation="5dp"
                        android:fontFamily="@font/chub"
                        android:text="@string/more_game"
                        android:textColor="?attr/textcolor"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </LinearLayout>


</ScrollView>