<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="13.00dp"
    android:layout_marginEnd="13.00dp"
    android:background="@drawable/popup"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="26.00dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/chub"
        android:gravity="center"
        android:text="@string/msg_game_over"
        android:textColor="@color/fontWhite"
        android:textSize="@dimen/_22sdp" />

    <LinearLayout
        android:id="@+id/ll_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26.00dp"
        android:background="@drawable/restart"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2.00dp"
            android:fontFamily="@font/chub"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/action_restart"
            android:textColor="@color/fontWhite"
            android:textSize="@dimen/_17sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26.00dp"
        android:background="@drawable/b1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2.00dp"
            android:fontFamily="@font/chub"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/home"
            android:textColor="@color/fontWhite"
            android:textSize="@dimen/_17sdp" />
    </LinearLayout>
</LinearLayout>

