<?xml version="1.0" encoding="utf-8"?><!--
[** CREATE : 18/10/2021 **]
[** UPDATE : 26/04/2022 **]
[** DEVELOPER BY NATHIT PANROD  **]
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:context=".Users.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="218dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/kitty_8" />

                <ImageView
                    android:id="@+id/Logo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/logo_white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/digiffiti"
                    android:text="@string/depression"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="?attr/textcolormain"
                    android:textSize="65sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/digiffiti"
                    android:text="@string/therapy_game"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="?attr/textcolormain"
                    android:textSize="40sp" />

                <View
                    android:layout_width="280dp"
                    android:layout_height="3dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:background="?attr/textcolormain" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chub"
                    android:text="@string/game_dep"
                    android:textColor="?attr/textcolormain"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical">

                    <Button
                        android:id="@+id/ButtonLogin"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_state_list_animator"
                        android:fontFamily="@font/chub"
                        android:stateListAnimator="@null"
                        android:elevation="2dp"
                        android:text="@string/login_home"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/ButtonReg"
                        android:layout_width="300dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:elevation="2dp"
                        android:background="@drawable/button_state_list_animator_white"
                        android:fontFamily="@font/chub"
                        android:stateListAnimator="@null"
                        android:text="@string/register_home"
                        android:textColor="?attr/textcolormain"
                        android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>